@@ -15,6 +15,9 @@ offers extended widgets based upon the original PyGTK widgets.
 
     - gazpacho > 0.6.5   http://ftp.gnome.org/pub/GNOME/sources/gazpacho/
     - zope.interfaces    http://www.zope.org/Products/ZopeInterface
+  
+  Some features of the ui test framework requires PyGObject 2.10.0 or higher
+  to function properly. It'll work without but some features are disabled.
 
 * Installation
 
